--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,3 @@
-<h1> Hola a todos!</h1>
-<app-header></app-header>
-<app-header></app-header>
-<app-header></app-header>
-<app-header></app-header>
-<app-header></app-header>
+<h1> Hola  {{ userName }}</h1>
+
+<input type="text" [placeholder]="userName" title="hola">
