--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,2 @@
-<h1> Hola  {{ userName }}</h1>
+<h1 (click)="addOne()"> Number:  {{ number}}</h1>
 
-<input type="text" [placeholder]="userName" title="hola">
