--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,3 @@
-<h1 (click)="addOne()"> Number:  {{ number}}</h1>
-
+<h1>Username: {{ userName }}</h1>
+<h2>Number: {{ number }}</h2>
+<input type="text" [(ngModel)]="userName" title="userName" (input)="addOne()" />
