--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,10 @@
-<h1>Username: {{ userName }}</h1>
-<h2>Number: {{ number }}</h2>
-<input type="text" [(ngModel)]="userName" title="userName" (input)="addOne()" />
+<h1> Bloque &#64;if - Renderizado dinamico </h1>
+@if (condition) {
+<h2>La condicion se cumple</h2>
+}
+@else if (condition2) {
+<h2>La segunda condicion se cumple</h2>
+}
+@else {
+<h2>las condiciiones no se cumplen</h2>
+}    
