--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,5 @@
-<h1> Bloque &#64;if - Renderizado dinamico </h1>
-@if (condition) {
-<h2>La condicion se cumple</h2>
+<h1> Bloque &#64;for  - Renderizado de listas </h1>
+
+@for (movie of movies; track movie) {
+  <p>  {{ $index + 1 }} - {{ movie }} </p>  
 }
-@else if (condition2) {
-<h2>La segunda condicion se cumple</h2>
-}
-@else {
-<h2>las condiciiones no se cumplen</h2>
-}    
